.. SPDX-FileCopyrightText: 2024 The IceTray Contributors
..
.. SPDX-License-Identifier: BSD-2-Clause

.. _phys-services-release-notes:

Release Notes
=============

main
----

* fix formatting and typos in docstrings
* Update majority of tests to I3MTRandomService (#3658)
* Fix MTRandomService exponential distribution bug and update full sim test (#3655)
* Clean up doxygen warnings (#3640)
* Rename I3MT19937 to I3MTRandomService so it is more clear what it is (#3633)
* Update tooling and code to use ruff v0.6.4 (#3624)
* Cosmetic improvements to stubs (#3494)
* Non-spherical OMs data structures for clsim (#3520)
* Add Integer32 to I3RandomService to ensure 32-bit random numbers are correct (#3642)
* Update simprod-scripts to I3MTRandomService and fix shell script tests so failures are caught (#3631)

June 18, 2024 don la dieu (nega at icecube.umd.edu)
---------------------------------------------------
IceTray Release v1.11.0

* [goodrunlist.py] add method for using i3live GRL (#3504)
* Run mypy in CI (#3480)
* mypy cleanup for core projects (#3414)
* update some project dependencies
* properly escape tokens in rst docstring (#3450)
* [phys-services] Add SPDX tags (#3435)

March 14, 2023 don la dieu (nega at icecube.umd.edu)
----------------------------------------------------
IceTray Release v1.10.0

* Explicitly import tableio converters (#3412)

Feb. 20, 2024 don la dieu (nega at icecube.umd.edu)
---------------------------------------------------
IceTray Release v1.9.2

* add some boost headers which presumably were implicit in the past
* Delete mailinglist files (#3357)
* Add upgrade rules to ruff (#3316)
* Remove all tab characters used for indentation from python files (#3300)

Dec. 14, 2023 don la dieu (nega at icecube.umd.edu)
---------------------------------------------------
IceTray Release v1.9.0

* Remove Uber Header (I3.h) (#3151)
* Remove naive datetime() objects (#3304)
* clean up F523, format has unused arguments (#3299)